# mcquote

./: .gitignore  CMakeLists.txt  mcq  quote_ex.txt
cmake/: FindSDL2_image.cmake
include/: mcquote.h
src/: main.c
